--- a/public/admin-side/receptionist/reservationreceptionist.html
+++ b/public/admin-side/receptionist/reservationreceptionist.html
@@ -511,7 +511,8 @@
                                         <th>Room</th>
                                         <th>Check-in</th>
                                         <th>Check-out</th>
-                                        <th>Status</th>
+                                        <th>Booking Status</th>
+                                        <th>Payment Status</th>
                                         <th>Amount</th>
                                         <th>Actions</th>
                                     </tr>
