confirmation + booking success

--- a/public/client/guest-details.html
+++ b/public/client/guest-details.html
@@ -378,7 +378,8 @@
           </div>
 
           <button class="btn-add-room" onclick="openRoomModal()">ADD A ROOM</button>
-          <button class="btn btn-continue btn-sm ms-auto" onclick="confirmBooking()">CONFIRM BOOKING</button>
+          <button class="btn-add-room" onclick="proceedToConfirmation()">Proceed to Confirmation</button>
+
         </div>
       </aside>
     </div>
