--- a/public/client/manage-booking.html
+++ b/public/client/manage-booking.html
@@ -177,25 +177,25 @@
 
             <div class="info-row">
               <div class="info-label">Check in</div>
-              <div class="info-value">Sunday, August 11, 2025</div>
+              <div class="info-value" id="checkIn">Sunday, August 11, 2025</div>
             </div>
             <div class="info-row">
               <div class="info-label">Check out</div>
-              <div class="info-value">Monday, August 12, 2025</div>
+              <div class="info-value" id="checkOut">Monday, August 12, 2025</div>
             </div>
             <div class="info-row">
               <div class="info-label">Guests</div>
-              <div class="info-value">2 Adults, 1 Child</div>
+              <div class="info-value" id="guestCount">2 Adults, 1 Child</div>
             </div>
 
             <div class="section-title" style="margin-top:12px;">Booked By</div>
             <div class="info-row">
               <div class="info-label">Name</div>
-              <div class="info-value">Prince Gallardo</div>
+              <div class="info-value" id="guestName">Prince Gallardo</div>
             </div>
             <div class="info-row">
               <div class="info-label">Email</div>
-              <div class="info-value">princegallardo@gmail.com</div>
+              <div class="info-value" id="guestEmail">princegallardo@gmail.com</div>
             </div>
           </div>
 
@@ -205,7 +205,7 @@
             <div style="height:10px;"></div>
             <div class="info-row">
               <div class="info-label">Booking #</div>
-              <div class="info-value">000123</div>
+              <div class="info-value" id="bookingRef"></div>
             </div>
             <div class="info-row">
               <div class="info-label">Booking Date</div>
@@ -213,7 +213,7 @@
             </div>
             <div class="info-row">
               <div class="info-label">Status</div>
-              <div class="info-value">Confirmed</div>
+              <div class="info-value" id="bookingStatus">Confirmed</div>
             </div>
           </div>
         </div>
@@ -227,44 +227,10 @@
               <th scope="col">Amount</th>
             </tr>
           </thead>
-          <tbody style="font-family: 'poppins',sans-serif; font-size: 0.80rem;">
-            <tr>
-              <td>Premium Room</td>
-              <td>2 nights</td>
-              <td>₱3,599</td>
-              <td>₱7,198</td>
-            </tr>
-            <!-- <tr>
-              <td>Family Room</td>
-              <td>3 nights</td>
-              <td>₱3,599</td>
-              <td>₱7,198</td>
-            </tr> -->
-          </tbody>
+         <tbody id="roomsTableBody"></tbody>
         </table>
 
-        <div class="totals-block" aria-hidden="false">
-          <table class="totals-table" role="table">
-            <tbody style="font-family: 'poppins',sans-serif; font-size:0.90rem;">
-              <tr>
-                <td class="label">Total:</td>
-                <td class="value">₱8,061.76</td>
-              </tr>
-               <tr>
-                <td class="label">Total paid:</td>
-                <td class="value">₱4,030.88</td>
-              </tr>
-              <tr>
-                <td class="label">VAT Rate (12%):</td>
-                <td class="value">863.76</td>
-              </tr>
-              <tr class="total-row">
-                <td class="label">Remaining balance:</td>
-                <td class="value">₱4,030.88</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+     
 
         <div class="payment-summary">
           <div class="section-title" style="margin-top:0; font-size: 1rem;">Payment Summary</div>
