--- a/public/admin-side/receptionist/receptionistpayment.html
+++ b/public/admin-side/receptionist/receptionistpayment.html
@@ -298,6 +298,7 @@
                                     <th>Reservation ID</th>
                                     <th>Guest Name</th>
                                     <th>Method</th>
+                                    <th>Status</th>
                                     <th>Amount Paid</th>
                                     <th>Balance</th>
                                     <th>Date</th>
@@ -360,6 +361,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="receptionist.js"></script>
+    <script src="receptionist-payments.js"></script>
     
     <style>
         /* Align with reservations table action button spacing */
@@ -406,6 +408,10 @@
                         <div class="col-md-4">
                             <label class="form-label">Method</label>
                             <input type="text" class="form-control" id="viewPayMethod" readonly>
+                        </div>
+                        <div class="col-md-4">
+                            <label class="form-label">Payment Status</label>
+                            <input type="text" class="form-control" id="viewPayStatus" readonly>
                         </div>
                         <div class="col-md-4">
                             <label class="form-label">Amount Paid</label>
@@ -462,6 +468,9 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <div id="proofImageContainer" style="flex:1;margin-right:12px"></div>
+                    <button type="button" id="rejectPaymentBtn" class="btn btn-danger">Reject</button>
+                    <button type="button" id="approvePaymentBtn" class="btn btn-success">Approve</button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -584,6 +593,17 @@
 
        <script src="../js/script.js"></script>
     <script src="../js/auth.js"></script>
+    <!-- Toast container -->
+    <div class="position-fixed top-0 end-0 p-3" style="z-index: 1080;">
+        <div id="receptionistToast" class="toast align-items-center text-bg-success border-0 d-none" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+                <div class="toast-body" id="receptionistToastBody">
+                    Action completed
+                </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
