--- a/public/client/manage-booking.html
+++ b/public/client/manage-booking.html
@@ -131,7 +131,7 @@
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h4 class="mb-0 fw-bold text-dark" style="font-family: Merriweather;">Reservation</h4>
     <div>
-      <span class="badge bg-success me-2">Confirmed</span>
+      <span class="badge bg-success me-2" id="statusBadge">Confirmed</span>
       <button class="btn btn-light btn-sm" id="closeDetailsBtn">
         <i class="fas fa-times"></i>
       </button>
@@ -218,28 +218,64 @@
           </div>
         </div>
 
-        <table class="table-invoice" role="table" aria-label="Booking items">
-          <thead style="font-size: 1rem;">
-            <tr>
-              <th scope="col">Description</th>
-              <th scope="col">Quantity</th>
-              <th scope="col">Unit Price</th>
-              <th scope="col">Amount</th>
-            </tr>
-          </thead>
-         <tbody id="roomsTableBody"></tbody>
-        </table>
+        
+                  <div class="table-wrapper">
+                       <table class="table table-hover reservations-table">
+                            <thead class="table-light">
+                                <tr>
+                              <th scope="col">Description</th>
+                              <th scope="col">Days</th>
+                              <th scope="col">Unit Price</th>
+                              <th scope="col">Total Amount</th>
+                                </tr>
+                            </thead>
+                            <tbody id="roomsTableBody"></tbody>
+                        </table>
+                    </div>
+
+
 
      
 
-        <div class="payment-summary">
+        <!-- <div class="payment-summary">
           <div class="section-title" style="margin-top:0; font-size: 1rem;">Payment Summary</div>
           <div class="payment-method" style="font-size: 0.80rem; font-family: 'poppins',sans-serif;">
             <strong>Premium Room</strong> — Paid via <strong>Paypal</strong>
           </div>
-          <!-- <div class="payment-method" style="font-size: 0.80rem; font-family: 'poppins',sans-serif;">
+     <div class="payment-method" style="font-size: 0.80rem; font-family: 'poppins',sans-serif;">
             <strong>Family Room</strong> — Paid via <strong>Paypal</strong>
-          </div> -->
+          </div>
+        </div> -->
+
+        <!-- Payment Proof Section -->
+        <div class="payment-proof-section mt-4 p-3 border rounded bg-light">
+          <div class="section-title" style="margin-bottom: 15px;">Upload Payment Proof</div>
+          <form id="paymentProofForm" enctype="multipart/form-data">
+            <div class="mb-3">
+              <label class="form-label">Payment Method *</label>
+              <select class="form-select" id="paymentMethod" required>
+                <option value="">-- Select Payment Method --</option>
+                <option value="bank_transfer">Bank Transfer</option>
+                <option value="gcash">GCash</option>
+                <option value="paypal">PayPal</option>
+                <option value="credit_card">Credit Card</option>
+                <option value="other">Other</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Proof of Payment (Image) *</label>
+              <input type="file" class="form-control" id="paymentProof" accept="image/*" required>
+              <small class="text-muted">Accepted formats: JPG, PNG, GIF (Max 5MB)</small>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Reference/Transaction ID</label>
+              <input type="text" class="form-control" id="transactionId" placeholder="e.g., TXN-123456">
+            </div>
+            <button type="submit" class="btn btn-success w-100">
+              <i class="fas fa-upload me-2"></i>Submit Payment Proof
+            </button>
+          </form>
+          <div id="paymentStatus" class="mt-3 d-none"></div>
         </div>
 
         <!-- Action Buttons -->
@@ -392,5 +428,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="manage-booking.js"></script>
+<script> src="payment-status-helper.js"</script>
 </body>
 </html>
