--- a/public/admin-side/receptionist/reservationdetails.html
+++ b/public/admin-side/receptionist/reservationdetails.html
@@ -252,6 +252,7 @@
                        <select id="reservationStatus" class="form-select form-select-sm" disabled>
                             <option value="confirmed">Confirmed</option>
                             <option value="checked_in">Checked In</option>
+                            <option value="checked_out">Checked Out</option>
                             <option value="pending">Pending</option>
                             <option value="cancelled">Cancelled</option>
                         </select>
